Add distortion slides

--- a/common/bibliography.bib
+++ b/common/bibliography.bib
@@ -230,3 +230,16 @@
     %url={https://doi.org/10.1007/978-3-319-54413-7}
 }
 
+% Multiple View Geometry in Computer Vision
+@book{hartley2003multiple,
+    author = {Hartley, Richard and Zisserman, Andrew},
+    title = {\href{https://doi.org/10.1017/CBO9780511811685}{Multiple View Geometry in Computer Vision}},
+    year = {2004},
+    isbn = {0521540518},
+    edition = {2},
+    publisher = {Cambridge University Press},
+    address = {New York, NY, USA},
+    doi={10.1017/CBO9780511811685}
+} 
+
+
