--- a/teoricas/teorica_03/src/bibliography.tex
+++ b/teoricas/teorica_03/src/bibliography.tex
@@ -3,6 +3,8 @@
     \frametitle{Bibliografía}
     \nocite{siegwart2011introduction}
     \nocite{corke2017robotics}
+    \nocite{hartley2003multiple}
+
 
     \printbibliography
 
