--- a/tps/tp1.tex
+++ b/tps/tp1.tex
@@ -17,9 +17,13 @@
 \begin{document}
 \maketitle
 
+\section{Entrega}
+Se deberá proveer un repositorio git y junto con las instrucciones de compilación en un archivo README.md.
+Además, se deberá entregar un informe realizado en Lyx o latex explicando los pasos realizados y analizando los resultados obtenidos.
+
 \section{Introducción}
 
-EL objetivo del tp es que se realicen los pasos básicos para poder triangular y proyectar puntos con una cámara estéreo. 
+El objetivo del tp es que se realicen los pasos básicos para poder triangular y proyectar puntos con una cámara estéreo. 
 Para esto se trabajará con datos reales.
 
 \section{Datos}
@@ -32,42 +36,39 @@ Para la calibración se puede utilizar cualquiera de las aplicaciones que se det
 \begin{itemize}
 	\item OpenCV tutorial\_camera\_calibration: \href{https://docs.opencv.org/4.x/d4/d94/tutorial_camera_calibration.html}{https://docs.opencv.org/4.x/d4/d94/tutorial\_camera\_calibration.html}
 	\item ROS camera\_calibration: \href{http://wiki.ros.org/camera_calibration/Tutorials/StereoCalibration}{http://wiki.ros.org/camera\_calibration/Tutorials/StereoCalibration}
+	\item Kalibr: \href{https://github.com/ethz-asl/kalibr}{https://github.com/ethz-asl/kalibr}
 	\item Camera Calibration Toolbox for Matlab: \href{https://www.cs.toronto.edu/pub/psala/VM/cameraCalibrationExample.html}{https://www.cs.toronto.edu/pub/psala/VM/cameraCalibrationExample.html}
 \end{itemize}
-
-
 
 Desarrollar un programa que lea un par de imágenes estéreo cualquiera y realice los siguientes pasos:
 
 \section{Rectificación de imágenes}
-Para rectificar las imágenes deberá hacer uso de la librería OpenCV. EN particular deberá utilizar las funciones: cv::stereoRectify(), cv::initUndistortRectifyMap() y remap().
-
+Con los parámetros íntrinsecos y extrínsecos, rectificar un par imágenes haciendo uso de la librería OpenCV. Para esto se deberan utilizar las funciones: cv::stereoRectify(), cv::initUndistortRectifyMap() y remap().
 
 \section{Extracción de feaures: Keypoints y descriptores}
 
 \begin{enumerate}
-	\item Detectar Keypoitns: Fast, ORB, GFTT, etc. 
-	\item Extraer descriptores: BRIEF, ORB, etc.
+	\item Detectar Keypoitns: FAST, ORB, SIFT, SURF, GFTT, BRISK, etc.
+	\item Extraer descriptores: BRIEF, ORB, BRISK, etc.
 \end{enumerate}
 
 \section{Búsqueda de correspondencias visuales}
 Realizar la búsqueda de correspondencias entre los feature de ambas imágenes (\emph{matching}). Para esto deberá utilizar la función cv::BFMatcher::BFMatcher(). 
 
 \section{Triangulación de puntos 3D}
-Dados los matches encontrados, realice la triangulación de los puntos utilizando la función: 
+Dados los matches encontrados, realice la triangulación de los puntos utilizando la función: cv::sfm::triangulatePoints().
 
 \section{Filtrado de correspondencias espúreas}
 Aplicar RANSAC para filtrar los matches espúreos y calcular la matríz fundamental. Para esto puede utilizar la función cv::findHomography().
 
 \section{Calcular el mapa de disparidad}
-Calcular el mapa de disparidad para esto  deberá utilizar la función cv::StereoMatcher::compute() de OpenCV. También utilizar la librería Elas.
+Calcular el mapa de disparidad para esto  deberá utilizar la función cv::StereoMatcher::compute() de OpenCV. También utilizar la librería LIBELAS (\href{http://www.cvlibs.net/software/libelas/}{http://www.cvlibs.net/software/libelas/})
 
-\section{Reconstrucción 3D}
-Utilizando el mapa de disparidad realice una reconstrucción densa de la escena observada. Para esto puede utilizar la matríz de retro-proyección Q.
+\section{Reconstrucción 3D densa}
+Utilizando el mapa de disparidad realice una reconstrucción densa de la escena observada utilizando la función cv::reprojectImageTo3D(). Para esto debe utilizar la matríz de reproyección Q retornada por la función cv::stereoRectify().
 
-\section{Calcular la matriz Esencial}
-Utilizando cv::recoverPose() estime la transformación entre ambas cámaras. Para esto deberá calcular la matríz esencial utilizando la función cv::findEssentialMat().
-
+\section{Reconstrucción 3D monocular}
+Utilizando cv::recoverPose() estimar la transformación entre la imagen izquierda y la imagen derecha. Para esto deberá calcular la matríz esencial utilizando la función cv::findEssentialMat().
 
 \printbibliography
 
