--- a/tps/tp1.tex
+++ b/tps/tp1.tex
@@ -67,7 +67,7 @@ Calcular el mapa de disparidad para esto  deberá utilizar la función cv::Stere
 \section{Reconstrucción 3D densa}
 Utilizando el mapa de disparidad realice una reconstrucción densa de la escena observada utilizando la función cv::reprojectImageTo3D(). Para esto debe utilizar la matríz de reproyección Q retornada por la función cv::stereoRectify().
 
-\section{Reconstrucción 3D monocular}
+\section{Estimación de pose Monocular}
 Utilizando cv::recoverPose() estimar la transformación entre la imagen izquierda y la imagen derecha. Para esto deberá calcular la matríz esencial utilizando la función cv::findEssentialMat().
 
 \printbibliography
