Add what is ROS

--- a/teoricas/teorica_04/src/ros.tex
+++ b/teoricas/teorica_04/src/ros.tex
@@ -1,6 +1,10 @@
 \begin{frame}
 	\frametitle{Motivación}
 	
+	Don’t reinvent the wheel. Create something new and do it faster and better by building on ROS!
+	
+	\note{https://www.ros.org/blog/why-ros/}
+	
 	\note{http://wiki.ros.org/es/ROS/Tutoriales}
 	
 	\note{https://www.youtube.com/playlist?list=PL8dDSKArO2-m7hAjOgqL5uV75aZW6cqE5}
@@ -10,26 +14,40 @@
 \begin{frame}
 	\frametitle{¿Qué es ROS?}
 	
-	\note{https://www.youtube.com/playlist?list=PL8dDSKArO2-m7hAjOgqL5uV75aZW6cqE5}
+	ROS (Robot Operating System) es un kit de desarrollo de software de código abierto para aplicaciones de robótica. ROS ofrece una plataforma de software estándar para desarrolladores de todas las industrias que los llevará desde la investigación y la creación de prototipos hasta la implementación y la producción.
 	
- \begin{figure}[!h]
-	\centering
-	\subfloat[ROS1]
-	{
-		\includegraphics[width=0.4\columnwidth]{images/ros_version_noetic.png}
-	}
-	\subfloat[ROS2]
-	{
-		\includegraphics[width=0.4\columnwidth]{images/ros_version_humble.png}
-	}
-	\end{figure}
+	\begin{itemize}
+		\item Comunidad global
+		\item Utilizado en cursos de robótica, investigación e industria
+		\item Acorta los tiempos de producción
+		\item Multi-dominio: indoor / outdoor, hogareño / industrial, bajo el agua / espacio
+		\item Multi-plataforma: Linux, Windows y macOS.
+		\item Open-source
+		\item Licencia permisiva (Apache 2.0)
+		\item Soporte desde la industria
+	\end{itemize}
+	
+	
+	\note{https://www.ros.org/blog/why-ros/}
 	
 	
 \end{frame}
 
 \begin{frame}
 	\frametitle{¿Qué es ROS?}
-	Versiones. ROS 2
+	  Trabajaremos con la versión Ubuntu LTS más actual, esta siempre viene con uan versión de ROS estable.
+	
+	\begin{figure}[!h]
+		\centering
+		\subfloat[ROS1]
+		{
+			\includegraphics[width=0.4\columnwidth]{images/ros_version_noetic.png}
+		}
+		\subfloat[ROS2]
+		{
+			\includegraphics[width=0.4\columnwidth]{images/ros_version_humble.png}
+		}
+	\end{figure}
 
 \end{frame}
 
