Add preamble.tex file

--- a/teoricas/teorica_04/src/ros.tex
+++ b/teoricas/teorica_04/src/ros.tex
@@ -332,10 +332,19 @@
 	
 \end{frame}
 
-\begin{frame}
+\begin{frame}[fragile]
 	\frametitle{Ejemplo Publicador y subscriptor}
 	
 	\TODO{Agergar código publicador subscriptor con listings}
+    
+%    \begin{columns}
+%        \begin{column}{0.5\textwidth}
+%            \lstinputlisting[firstline=59, lastline=77]{src/publisher.c}
+%        \end{column}
+%        \begin{column}{0.5\textwidth}
+%            \lstinputlisting[firstline=79, lastline=108]{src/subscriber.c}
+%        \end{column}
+%    \end{columns}
 	
 	ros2 run cpp\_pubsub talker
 	
