Use preamble.tex for all slides

--- a/common/preamble.tex
+++ b/common/preamble.tex
@@ -40,7 +40,7 @@
 \graphicspath{{./images/}}
 
 % add math preamble
-%\input{./math_preamble}
+\input{../../common/math_preamble}
 
 % listings configuration for C code
 \usepackage{listings} % code
