Add subscriber, publisher, CMakelists.txt

--- a/common/preamble.tex
+++ b/common/preamble.tex
@@ -15,7 +15,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc} % para copiar acentos en español del pdf y permite acentos en las notas
 \usepackage[spanish]{babel}
-\usepackage[binary-units=true,per-mode = symbol]{siunitx} % para manejar las unidades
+\usepackage[per-mode = symbol]{siunitx} % para manejar las unidades
 \usepackage{multirow}
 \usepackage{graphicx}
 \usepackage{xcolor}
