--- a/teoricas/teorica_04/src/ros.tex
+++ b/teoricas/teorica_04/src/ros.tex
@@ -337,14 +337,14 @@
 	
 	\TODO{Agergar código publicador subscriptor con listings}
     
-%    \begin{columns}
-%        \begin{column}{0.5\textwidth}
-%            \lstinputlisting[firstline=59, lastline=77]{src/publisher.c}
-%        \end{column}
-%        \begin{column}{0.5\textwidth}
-%            \lstinputlisting[firstline=79, lastline=108]{src/subscriber.c}
-%        \end{column}
-%    \end{columns}
+    \begin{columns}
+        \begin{column}{0.5\textwidth}
+            \lstinputlisting[firstline=59, lastline=77]{src/publisher\_member\_function.cpp}
+        \end{column}
+        \begin{column}{0.5\textwidth}
+            \lstinputlisting[firstline=79, lastline=108]{src/publisher\_member\_function.cpp}
+        \end{column}
+    \end{columns}
 	
 	ros2 run cpp\_pubsub talker
 	
