--- a/common/preamble.tex
+++ b/common/preamble.tex
@@ -49,7 +49,7 @@
 \definecolor{weborange}{RGB}{255,165,0}
 \definecolor{frenchplum}{RGB}{129,20,83}
 \lstset{ % spanish characters for listings package
-    language=C,
+    language=C++,
     inputencoding=latin1,
     breaklines=true,
     tabsize=2,
