Add some links to ROS 2navigation

--- a/teoricas/teorica_04/src/ros.tex
+++ b/teoricas/teorica_04/src/ros.tex
@@ -385,6 +385,12 @@
 
 \begin{frame}
 	\frametitle{Install turtlebot en ROS}
+    
+    https://ros2-industrial-workshop.readthedocs.io/en/latest/\_source/navigation/ROS2-Navigation.html
+    
+    https://docs.ros.org/en/humble/Tutorials/Advanced/Simulators/Ignition.html
+    
+    https://navigation.ros.org/index.html
 	
 \end{frame}
 
@@ -407,6 +413,8 @@
 
 \begin{frame}
     \frametitle{rqt\_bag}
+    
+    \TODO{rat\_bag todavía no fue portado a ROS 2}
 
     
 \end{frame}
