Add turtlebot video

--- a/common/preamble.tex
+++ b/common/preamble.tex
@@ -11,11 +11,11 @@
 \setbeamercolor{block body}{bg=blue!12,fg=black} % color of blocks
 
 % Latex packages
-\usepackage{pdfpc-commands} % pdfpc movie commands. Requires to be downloaded manually from https://github.com/pdfpc/pdfpc/issues/328#issuecomment-437397536
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc} % para copiar acentos en español del pdf y permite acentos en las notas
 \usepackage[spanish]{babel}
 \usepackage[per-mode = symbol]{siunitx} % para manejar las unidades
+\usepackage{multimedia} % to add videos with \movie command
 \usepackage{multirow}
 \usepackage{graphicx}
 \usepackage{xcolor}
@@ -72,5 +72,4 @@
     {Í}{{\'I}}1
     {Ó}{{\'O}}1
 }
-
 
