--- a/teoricas/teorica_04/src/ros.tex
+++ b/teoricas/teorica_04/src/ros.tex
@@ -412,9 +412,17 @@
     https://docs.ros.org/en/humble/Tutorials/Advanced/Simulators/Ignition.html
     
     https://navigation.ros.org/index.html
+
+\end{frame}
+
+
+\begin{frame}[fragile]
+    \frametitle{Ejemplo completo: Navegación con Turtlebot3}
     
-    \TODO{agregar vídeo o gif}
-	
+    \begin{center}
+        \movie[loop]{\includegraphics[width=\columnwidth]{images/turtlebot_navigation_video.png}}{videos/turtlebot_navigation.avi}
+    \end{center}
+    
 \end{frame}
 
 \begin{frame}
